# logistics-coordinator

./: .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  render.yaml
crates/backend_api/: Cargo.toml  branches_dump.sql  clergy_dump.sql
crates/backend_api/src/: auth.rs  lib.rs  main.rs
crates/backend_api/src/auth/: delegation.rs  handlers.rs  jwt.rs  mod.rs  roles.rs
crates/backend_api/src/handlers/: admin.rs  auth.rs  branches.rs  clergy.rs  flare.rs  mod.rs  proximity.rs  sync.rs
crates/backend_api/src/middleware/: auth.rs  mod.rs
crates/backend_api/src/models/: mod.rs
crates/crdt_engine/: Cargo.toml
crates/crdt_engine/src/: clock.rs  lib.rs  merge.rs  op.rs
crates/crypto_core/: Cargo.toml
crates/crypto_core/src/: ed25519.rs  kdf.rs  lib.rs
crates/geoh3_index/: Cargo.toml
crates/geoh3_index/benches/: h3_bench.rs
crates/geoh3_index/src/: distance.rs  eta.rs  h3_wrapper.rs  lib.rs  tile_signer.rs
crates/geoh3_index/tests/: integration_tests.rs
crates/handlers/: clergy.rs
crates/sqlite_embedded/: Cargo.toml
crates/sqlite_embedded/migrations/: 001_initial_schema.sql  002_seed_data.sql
crates/sqlite_embedded/src/: db.rs  lib.rs  models.rs  queue.rs  sync.rs
crates/sqlite_embedded/tests/: integration_tests.rs
flutter_app/: flutter_rust_bridge.yaml  pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/kotlin/com/zerotrust/logistics/flutter_app/: MainActivity.kt
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: bridge.dart  main.dart
flutter_app/lib/constants/: motion_tokens.dart
flutter_app/lib/mixins/: optimistic_operation.dart
flutter_app/lib/models/: branch.dart  branch_model.dart  flare_model.dart
flutter_app/lib/providers/: auth_provider.dart  clergy_auth_provider.dart  flare_provider.dart
flutter_app/lib/screens/: admin_dashboard_screen.dart  branch_details_screen.dart  clergy_dashboard_screen.dart  clergy_login_screen.dart  dashboard_screen.dart  help_resources_screen.dart  home_screen.dart  login_screen.dart  map_screen.dart  my_flares_screen.dart  profile_screen.dart  register_screen.dart  splash_screen.dart  today_schedule_screen.dart  transport_hub_screen.dart  ui_ux_test_screen.dart
flutter_app/lib/screens/events/: event_form_sheet.dart  events_screen.dart
flutter_app/lib/services/: api_client.dart  auth_service.dart  branch_service.dart  crystal_button.dart  haptic_service.dart
flutter_app/lib/utils/: geohash.dart  geohash_helper.dart
flutter_app/lib/widgets/: alerts_manager.dart  animated_list_view.dart  auth_wrapper.dart  branch_editor.dart  crystal_button.dart  draggable_snap_sheet.dart  empty_state.dart  enhanced_search_bar.dart  events_manager.dart  inline_feedback.dart  location_picker.dart  login_sheet.dart  modern_marker.dart  photo_manager.dart  physics_sheet.dart  pickup_points_manager.dart  pull_to_refresh.dart  role_guard.dart  service_times_editor.dart  skeleton_loader.dart  success_animation.dart  swipe_to_dismiss.dart  toast_message.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
