[package]
name = "backend_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Our crates
crypto_core = { path = "../crypto_core" }
crdt_engine = { path = "../crdt_engine" }
geoh3_index = { path = "../geoh3_index" }
sqlite_embedded = { path = "../sqlite_embedded" }

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth", "limit"] }
tower_governor = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Authentication
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.8", features = ["v4", "v7", "serde"] }
hex = "0.4"
base64 = "0.22"

# Crypto for placeholder
ed25519-dalek = "2.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend_server"
path = "src/main.rs"