[package]
name = "crypto_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["batch", "serde"] }
argon2 = "0.5"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
hex = "0.4"

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"

[features]
default = ["std"]
std = ["ed25519-dalek/std", "argon2/std"]
no_std = []