[package]
name = "geoh3_index"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto_core = { path = "../crypto_core" }
h3o = { version = "0.7", features = ["geo"] }
geo = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
hex = "0.4"
anyhow = "1.0"

[dev-dependencies]
rand = "0.8"
float-cmp = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "h3_bench"
harness = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
path = "src/lib.rs"