[package]
name = "sqlite_embedded"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto_core = { path = "../crypto_core" }
crdt_engine = { path = "../crdt_engine" }
geoh3_index = { path = "../geoh3_index" }

# Database - using rusqlite (works on Windows)
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Async runtime
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP client for sync
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "v7", "serde"] }

[dev-dependencies]
tempfile = "3.0"
rand = "0.8"

[lib]
crate-type = ["lib", "staticlib"]
path = "src/lib.rs"